[tool.poetry]
name = "reaction_checker"
version = "0.1.0"
description = "Program checks reaction and tells your type of character"
authors = ["Dmitriy Chebruchan <chebruchan2707@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
autopep8 = "^1.7.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
