[tool.poetry]
name = "reaction_checker"
version = "0.1.0"
description = "Program checks reaction and tells your type of character"
authors = ["Dmitriy Chebruchan <chebruchan2707@gmail.com>"]
license = "MIT"
packages = [
  { include = "reaction_checker" },
]

[tool.poetry.scripts]
reaction_checker = "reaction_checker.scripts.reaction_checker:main"

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.7.0"
pytest = "^7.1.3"
flake8 = "^5.0.4"
playsound = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
